@@ -16,7 +16,6 @@ https://www.w3schools.com/tags/tag_button.asp
 https://www.w3schools.com/tags/tag_textarea.asp
 23. Textarea: Add maxlength
 24. Textarea. Add wrap
-25. Select: Constructor tests for errors.
 26. Select: 'options' parameter rewrite to 'data' like in Button.
 27.
 
@@ -45,3 +44,6 @@ OK [20240106] skim
 
 12. Input: Doc for Data::HTML::Element::Input.
 OK [20240107] skim
+
+25. Select: Constructor tests for errors.
+OK [20240116] skim
